# montage

./: .gitignore  Cargo.toml  PRINCIPLES.md  README.md
.githooks/: pre-commit
scripts/: setup.sh
src/: agent.rs  audio.rs  auto_video.rs  clips_panel.rs  config.rs  export.rs  main.rs  ollama.rs  pexels.rs  player.rs  project.rs  prompt.rs  startup.rs  transcription.rs  video.rs  waveform.rs
