[package]
name = "montage"
version = "0.1.0"
edition = "2024"
authors = ["Alexandre <almaju.fr@gmail.com>"]
description = "AI-powered video editor — feed audio, generate YouTube-ready videos"
license = "MIT"
repository = "https://github.com/Almaju/montage"
keywords = ["video", "editor", "ai", "gpui"]
categories = ["multimedia::video", "gui"]

[dependencies]
# UI Framework (from Zed repo - crates.io version is yanked)
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["json"] }

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# Future additions (commented for now):
# gstreamer = "0.23"  # Video processing
# whisper-rs = "0.1"  # Audio transcription

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "montage"
path = "src/main.rs"

# Use same patches as Zed workspace for build compatibility
[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
calloop = { git = "https://github.com/zed-industries/calloop" }
